--- a/src/components/sections/test-skills/skills.css
+++ b/src/components/sections/test-skills/skills.css
@@ -18,11 +18,7 @@
 
 .icon {
     margin-left:0px;
-}
-
-
-
-.inline-react-icons_c2_r1 {
     padding-right:10px;
 }
+
 
